{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "ScreenPos",
            "id": "bd891f5f-6134-4580-b0e3-76bf90423583",
            "actions": [
                {
                    "name": "MouseScreenPos",
                    "type": "Value",
                    "id": "d3859f38-9b15-4ad6-8257-6d9d2a54da20",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "2355eae8-aa9c-42e0-b4ba-f07464b69f6d",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseScreenPos",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cb7230f3-6fe8-4b7a-896f-98acd88538de",
                    "path": "<Touchscreen>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseScreenPos",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Player",
            "id": "ba636e95-1bad-4f4b-a8de-2842b799aeb1",
            "actions": [
                {
                    "name": "Tap",
                    "type": "PassThrough",
                    "id": "0bd3e668-45f8-4584-833d-4116073cfb1f",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Press",
                    "type": "Button",
                    "id": "86cd7e6c-67db-424b-8f1a-6fa29918c1e5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "89f93049-0ca2-48bc-b931-164d6d49eebc",
                    "path": "<Touchscreen>/primaryTouch/startPosition",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Tap",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "410cc7bc-f766-425a-9bdf-596fbdd44e30",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Press",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3e402fe7-4c43-40e7-a702-62f4dfc01c3a",
                    "path": "<Touchscreen>/Press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Press",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}